--- a/luv.html
+++ b/luv.html
@@ -14,7 +14,7 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
-  $(".ngakmau").on("mouseover", function () {
+  $(".ngakmau").on("click", function () {
     $(this).animate(
       {
         top: Math.random() * window.innerHeight + "px",
