--- a/luv.html
+++ b/luv.html
@@ -17,8 +17,8 @@
   $(".ngakmau").on("click", function () {
     $(this).animate(
       {
-        top: 100 * window.innerHeight + "px",
-        left: 100 * window.innerHeight + "px",
+        top: Math.random() * window.innerHeight + "px",
+        left: Math.random() * window.innerHeight + "px",
       },
       "medium"
     );
