--- a/luv.html
+++ b/luv.html
@@ -1,4 +1,4 @@
-<body>
+<body style="max-width:250px;max-height:100vh">
   <h1>Hi cantik...</h1>
   <iframe
     src="https://giphy.com/embed/M90mJvfWfd5mbUuULX"
